2010-01-20  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-02 bug fix: more assert fixes for EOL handling

2010-01-15  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-01 bug fix: assert in rawCellToRead did not contain EOLS
	
2010-01-11  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-00 Augmented API to generate END-OF-LS events

2009-11-10  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-07 Modified the noarg version of 
	scheduleRawEmptyCellForDiscard used by the RB to signal the discard 
	thread upon stop. Previously, this caused a crash of the RB

2009-10-28  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-06 (V00-07-05 used by andreas for undocumented fixes for 
	64-bit compilation)
	* shmem and sem keys assigned by uid
	* ShmBuffer always tries to remove existing shm segments for same uid
	
2009-08-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-04
	* src/FUShmRawCell.cc (NSUPERFRAG_MAX): set maximum number of
	superfragments to 80. It used to be 64, but the actual number of
	superfragments these days exceeds 64 already. The hard limit is
	80.

2009-04-30  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-03 (V00-07-02 undocumented compat change by elmer)
	* bug-fix: wait in releaseSharedMemory before returning false
	* do 10 attempts and check the number of attached processes
	* this should fix the failures when going ready->halted->ready
	
2008-11-03  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-01
	* evaluate the env variables FUSHM_KEYFILE and FUSEM_KEYFILE and
	use these values instead of /dev/null, to allow several brokers on
	the same machine (Kurt)
	* add accessors nRawCells(), nRecoCells(), nDqmCells()

2008-10-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-00
	* add Kurt's changes
	* add fuProcessId and fuGuid to reco and dqm cell records
	* incorporate both fields in FUShmBuffer