@@ -1,3 +1,7 @@
+2010-05-17  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V00-08-03 change EMPTY to STOP event type for stopping
+	
 2010-01-20  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V00-08-02 bug fix: more assert fixes for EOL handling
